@@ -1,3 +1,8 @@
+2008-03-11  Alexander Larsson  <alexl@redhat.com>
+
+        * gthemedicon.c:
+	Fix crashes in new constructor and properties code
+
 2008-03-10  Murray Cumming  <murrayc@murrayc.com>
 
 	* gfile.c: Minor spelling correction in documentation:
